Refactor input fields for student results

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Result Management System</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -9,24 +10,22 @@
 
 <div class="container">
     <h1>Student Result Management System</h1>
-    <p>Enter your Roll Number to view result</p>
 
-    <input type="text" id="rollInput" placeholder="Enter Roll Number">
-    <button onclick="showResult()">View Result</button>
+    <div class="input-section">
+        <label>Student Name:</label>
+        <input type="text" id="name">
 
-    <div id="resultBox" class="hidden">
-        <h2>Student Result</h2>
-        <p><strong>Name:</strong> <span id="name"></span></p>
-        <p><strong>Roll No:</strong> <span id="roll"></span></p>
-        <p><strong>Subject 1:</strong> <span id="s1"></span></p>
-        <p><strong>Subject 2:</strong> <span id="s2"></span></p>
-        <p><strong>Subject 3:</strong> <span id="s3"></span></p>
-        <p><strong>Total:</strong> <span id="total"></span></p>
-        <p><strong>Average:</strong> <span id="avg"></span></p>
-        <p><strong>Grade:</strong> <span id="grade"></span></p>
+        <label>Number of Subjects:</label>
+        <input type="number" id="subjectCount" min="1">
+        
+        <button onclick="generateInputs()">Enter Marks</button>
     </div>
 
-    <p id="error" class="error"></p>
+    <div id="marksContainer"></div>
+
+    <button id="calculateBtn" onclick="calculateResult()">Calculate Result</button>
+
+    <div id="resultBox"></div>
 </div>
 
 <script src="script.js"></script>
